finish phc hist

--- a/fdphd.bib
+++ b/fdphd.bib
@@ -741,6 +741,15 @@ j%% TODO understand what this is about
   year={1987},
   publisher={Taylor \& Francis}
 }
+@article{russell2007photonic,
+  title={Photonic crystal fibers: a historical account},
+  author={Russell, Philip},
+  journal={IEEE Leos Newsletter},
+  volume={21},
+  number={5},
+  pages={11--15},
+  year={2007}
+}
 @article{nemec2005highly,
   title={Highly tunable photonic crystal filter for the terahertz range},
   author={Nemec, H and Kuzel, P and Duvillaret, L and Pashkin, A and Dressel, M and Sebastian, MT},
