--- a/theory.tex
+++ b/theory.tex
@@ -1144,7 +1144,10 @@ usually do not discuss any structuration and are thus also applicable to fully h
 Typical of this class of media is a very small wavevector, which can be approximated to the extreme case of the whole $N\sim 0$ region oscillating in-phase. The wave entering a $N\sim 0$ medium at near-normal incidence refracts rapidly from the normal; for angles higher than the very small critical angle the wave undergoes the \textit{total external reflection}. 
 % note: this has been observed in thinned waveguides, too
 % Epsilon-near-zero metamaterials and electromagnetic sources: Tailoring the radiation phase pattern
+
+%the 2000s have brought also the \textit{near-zero} effective parameter structures into the limelight, which are also unusual in nature
 % electromagnetic nihility?
+%add some notable papers; quotes may be in: Epsilon-Mu Zero Meta-material with Zero Refractive Index An Electromagnetic Nihility, Shantanu Das
 
 %}}}
 \paragraph{Transformation optics and electromagnetic cloaks}%{{{ ================= OK (cites)
@@ -1203,19 +1206,16 @@ it could not become negative, since the effective permeability $\meff(\omega) > 
 
 %}}}
 \paragraph{Negative effective permeability and negative refractive index}  %{ {{ ================== TODO  "MM" term first?
-Metamaterials with resonant magnetic dipole arrays \cite{smith2000composite} %% TODO check XXX XXX
 
-\mdf{PK-"The word “metamaterial” (MM) appeared first in the paper by Smith et al. in 2000 [6] where a structured material" -- is it true? 
-Although somewhat redundant to \textit{artificial dielectrics}, it can be viewed as more fortunate as 
-It gained on significant popularity in the early 2000s, probably in connection with the Pendry's paper \cite{pendry1999magnetism} which outlined how a negative index of refraction can be obtained in a periodic medium, where metallic wires introduce $\eeff<0$ and small metallic loops embedded in the lattice, known as \textit{split-ring resonators} (SRR), introduce $\meff<0$.
+% PK writes (where??) 
+% "The word “metamaterial” (MM) appeared first in the paper by Smith et al. in 2000 [6] where a structured material" -- is it true? 
+Despite the literature is not unanimous in this, a search shows that the term \textit{metamaterial} was first used by Walser in autumn 1999. Although somewhat redundant to \textit{artificial dielectrics} which has was used for decades before, it can be viewed as more fortunate as it does not imply that the effective parameters must resemble a dielectric, nor require the man-made origin of the structure.
 
-\cite{smith2000composite}
-}
-
-\textit{split-ring resonator}
+The research of artificial dielectrics, or newly, metamaterials, gained on significant popularity in the early 2000s, probably in connection with the Pendry's paper \cite{pendry1999magnetism} which outlined how a negative index of refraction can be obtained in a periodic medium, where metallic wires introduce $\eeff<0$ and small metallic loops embedded in the lattice, known as \textit{split-ring resonators} (SRR), introduce $\meff<0$. 
+Its realization for the microwaves followed suite within a year \cite{smith2000composite}. %% TODO check XXX XXX
 
 A major issue are the dissipative losses in resonant periodic structures, which were not sufficiently resolved yet. Some quantitative improvements can be easily done, namely thickening the metallic structures and increasing their inductance-to-capacitance ratios of the split-ring resonators (SRR) \cite{zhou2008efficient}. At the near-infrared and optical wavelengths, SRRs are better substituted by perforated metallic sheets, so called \textit{fishnets}, % todo cite
-and it may be favorable to substitute metals with certain types of oxides with near-infrared resonances \cite{naik2011oxides}.
+and it may be favorable to substitute metals with certain types of oxides with metallic-like behavoiul in the optical range \cite{naik2011oxides}.
 
 \paragraph{Superlensing with metamaterials}
  and sub-diffraction imaging
@@ -1249,26 +1249,17 @@ To achieve the desired high resolution, the medium has to maintain  \todo{+}
 }
 
 
-\paragraph{near-zero}
-the 2000s have brought also the \textit{near-zero} effective parameter structures into the limelight, which are also unusual in nature
-add some notable papers; quotes may be in: Epsilon-Mu Zero Meta-material with Zero Refractive Index An Electromagnetic Nihility, Shantanu Das
-
-
-% \paragraph{Metamaterial cloaking}
-% TODO The apparent unification of \textit{metamaterials} with \textit{negative index of refraction} should not be perceived as their sole use -- in fact, a notable part of contemporary metamaterial research is based on purely positive index of refraction.
-%Transformation optics
-
-
-\paragraph{Metamaterial applications without unusual parameters}
+\paragraph{Metamaterial applications without unusual parameters} %{{{ ============== (todo expand?)
 In spite of the above mentioned applications, many metamaterial applications do not involve unusual effective parameters \cite{zheludev2010road}.
 Among these are  reaching strong chirality, building sensors and light modulators or devices making use of the enhanced nonlinear interaction.
 
-Another example of recent \cite{zhao2009repulsive}, but somewhat controversial \cite{silveirinha2010comment}, metamaterial research which does not aim to achieve negative $\Neff$, $\eeff$ nor $\meff$ is in reversing the Casimir force.
+Another example of recent \cite{zhao2009repulsive}, but somewhat controversial \cite{silveirinha2010comment}, possible metamaterial application which does not require to achieve negative $\Neff$, $\eeff$ nor $\meff$ is in reversing the Casimir force.
 
 %Metasurfaces.
 
 %}}}
-\subsection{Second unification: metamaterials with photonic crystals} %%						 TODO%{{{
+
+\subsection{Second unification: metamaterials with photonic crystals} 
 The unification between 
 
 \cite{shamonina2007metamaterials}
@@ -1279,9 +1270,6 @@ the unification of mm and phc become apparently a more important topic when the 
 \cite{yannopapas2005negative}
 
 \mdf{\textit{plasmonic nanoparticles} at optical frequencies}
-
-%}}}
-
 
 
 
@@ -1417,8 +1405,24 @@ The question of indefinite sign can be decided using the assumption of medium \t
 	\paragraph{Antiresonances and problems with local effective parameters}
 %% TODO add to the first Mie resonance discussed
 Anti-resonant response of resonant inclusions : "antiresonance "may not" come from periodicity, as it is also observed in random structures"; %% \cite{wallen2010}
+% -- but this argument assumes that aperiodicity  will always prohibit antiresonance; in fact it may just broaden it in spectra
 Restoring the physical meaning of MM cosstitutive parameters %%  \cite{alu2010}
 }
+
+\paragraph{Metamaterial definitions}
+whatis.com (http://whatis.techtarget.com/definition/metamaterial):
+\quote{A metamaterial is a (\ldots) substance whose properties depend on its inter-atomic structure rather than on the composition of atoms themselves.}
+% and this continues with description of neg refr as the typical application
+
+Duke university (http://metamaterials.duke.edu/research/metamaterials):
+\quote{MMs are artificially structured materials used to control light, sound and many other physical phenomena. The properties of metamaterials are derived from the inherent properties of their constituent materials, as well as from the geometrical arrangement of these (\ldots)}
+% further they stress the importance of homogenization
+% "it is difficult to arrive to a strict and unambiguous definition"
+
+
+
+
+
 
 %% finish this? or leave this out?
 %%      \section{Materials available for metamaterial construction}
